<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gd_left"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="40dp"

        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gd_right"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="40dp"

        />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="38dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toStartOf="@id/delta_tv"
        app:layout_constraintTop_toTopOf="parent"

        />

    <TextView

        android:id="@+id/delta_tv"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginVertical="35dp"
        android:text="@string/d_e_l_t_a"
        android:textColor="@color/black"

        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <TextView
        android:id="@+id/passenger_tv"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="35dp"
        android:text="@string/passenger"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/gd_left"
        app:layout_constraintTop_toBottomOf="@id/delta_tv"

        />

    <TextView
        android:id="@+id/kath_tv"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="35dp"
        android:text="@string/kathleen_huang"
        app:layout_constraintStart_toEndOf="@id/passenger_tv"
        app:layout_constraintTop_toBottomOf="@id/delta_tv"

        />

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="0dp"
        app:layout_constraintTop_toBottomOf="@id/passenger_tv">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:src="@drawable/blue" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="40dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/jfk"
                    android:textColor="@color/white"
                    android:textSize="40sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40dp"
                    android:text="@string/new_york_city"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/depart"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_8_00am"
                    android:textColor="@color/white"
                    android:textSize="25sp" />


            </LinearLayout>

            <ImageView
                android:layout_marginHorizontal="15dp"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_flight" />


            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="match_parent"

                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/sea"
                    android:textColor="@color/white"
                    android:textSize="40sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40dp"
                    android:text="@string/seattle"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/arrive"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_11_17am"
                    android:textColor="@color/white"
                    android:textSize="25sp" />




            </LinearLayout>
        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/card"
        app:layout_constraintStart_toEndOf="@id/gd_left"
        app:layout_constraintEnd_toStartOf="@id/gd_right"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_marginVertical="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/boarding_begins"
                android:textAllCaps="true"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_7_30am"
                android:textAllCaps="true"
                android:textSize="25sp"
                android:textColor="@color/black"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gate"
                android:layout_marginTop="25dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/d4"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:layout_marginBottom="25dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seat" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_3c"
                android:textColor="@color/black"
                android:textSize="25sp" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_marginStart="75dp"
            android:layout_marginVertical="50dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flight" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d2218"
                android:textColor="@color/black"
                android:textSize="25sp" />
            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/qr"
                android:layout_marginTop="30dp"
                />
            
            
        </LinearLayout>
        
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>